--- a/JspWebsite/src/main/webapp/css/board.css
+++ b/JspWebsite/src/main/webapp/css/board.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-
 .content {
 	grid-template-columns: 250px 550px;
 }
@@ -16,7 +15,7 @@
 	margin: 10px;
 }
 
-.board {
+#board_name {
 	padding: 20px;
 }
 
@@ -50,7 +49,14 @@
 	grid-template-rows: auto;
 	margin: 2px;
 }
-
+#edl{
+	display: flex;
+	justify-content: right;
+	margin-right: 10px;
+}
+#edl button{
+	width: 60px;
+}
 #p {
 	margin: 10px;
 }
@@ -65,13 +71,16 @@
 	width: 50px;
 }
 #heartBtn{
-	width: 30px;
-	text-align: center;
+	width: 25px;
+	height: 25px;
 	background-color: pink;
 	color: red;
+	margin-left:10px;
+	font-size:0.7em;
 }
 #reply {
 	background-color: #f8f8f8;
+	display: flex;
 }
 
 #c {
